--- a/demo/src/main/resources/static/Login/login.css
+++ b/demo/src/main/resources/static/Login/login.css
@@ -1,9 +1,7 @@
-body {
-    background-color: #f0f0f0;
+body{
     display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
 }
 
 .page-title {
@@ -13,9 +11,17 @@ body {
     text-align: center;
 }
 
+.container{
+    max-width: 75%;
+    margin: 0 auto;
+    padding: 20px;
+    
+}
 
-
-
+.bottom{
+    padding:10%
+    
+}
 
 /*
 .footer {
@@ -70,6 +76,7 @@ body {
 .gray-box {
     
 
+    
     width: 50%;
     border: 2px solid #d3d3d3;
     /* Borde gris */
@@ -87,15 +94,19 @@ body {
 }
 
 .box{
-
+    align-items: center;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
     /*width: 50%;
     float: left;
     padding: 0px;
     left: 50%; /* centers #box in its containing element */
 
-    flex-wrap: wrap;
-    display: flex;
-    position: fixed; 
+   
+    
+
     padding: 5px;
     background-color: #038073;
     
