--- a/demo/src/main/resources/static/index.css
+++ b/demo/src/main/resources/static/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   background-color: #f0f0f0;
   margin: 0;
@@ -157,6 +159,7 @@ body {
   max-height: 100px;
   overflow: auto;
   border-radius: 8px;
+  
 }
 
 #check {
@@ -190,9 +193,10 @@ input[type="checkbox"]:checked {
 }
 
 input[type="checkbox"]:checked::before {
-  content: '\2714';
+  content: '\f00c';
+  font-family: FontAwesome;
   font-size: 12px;
-  color: white;
+  color: white ;
   position: absolute;
   top: 50%;
   left: 50%;
