intrgracion con la BD y logica para que funcione "Ver Detalle" del paciente seleccionado en "Consultar Casos" se selecciona por ID_PACIENTE

--- a/demo/src/main/resources/static/detalle/detalle.css
+++ b/demo/src/main/resources/static/detalle/detalle.css
@@ -68,9 +68,13 @@ input {
     flex-grow: 1;
 }
 
-.justificacion-container,
-.comentarios {
+.justificacion-container {
     width: 100%;
+    margin-top: 10px;
+}
+.justificacion-rechazo-container,
+.comentarios {
+    width: 49%;
     margin-top: 10px;
 }
 
