--- a/demo/src/main/resources/static/dataset/exportar.css
+++ b/demo/src/main/resources/static/dataset/exportar.css
@@ -122,6 +122,37 @@ p {
     background-color: #007a6e;
 }
 
+.loader {
+    display: none;
+    width: 80px;
+    padding: 12px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: #25b09b;
+    --_m:
+        conic-gradient(#0000 10%, #000),
+        linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+    mask: var(--_m);
+    -webkit-mask-composite: source-out;
+    mask-composite: subtract;
+    animation: l3 1s infinite linear;
+    margin: 0 auto;
+}
+
+@keyframes l3 {
+    to {
+        transform: rotate(1turn)
+    }
+}
+
+.modal-icon {
+    display: none;
+    font-size: 3rem;
+    color: #009587;
+    margin-bottom: 1rem;
+}
+
 
 @media (max-width: 767px) {
     .centered-text {
