Arreglo botones Volver, agrego Cerrar Sesion, agrego el pase del Medico medico entre pantallas

--- a/demo/src/main/resources/static/detalle/detalle.css
+++ b/demo/src/main/resources/static/detalle/detalle.css
@@ -289,3 +289,8 @@ input.form-control {
         width: 48%;
     }
 }
+
+.logout-button{
+    pointer-events: auto !important;
+    opacity: 1 !important;
+}
