--- a/demo/src/main/resources/static/dataset/exportar.css
+++ b/demo/src/main/resources/static/dataset/exportar.css
@@ -1,5 +1,5 @@
 .container {
-    max-width: 65%;
+    max-width: 75%;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
@@ -11,11 +11,6 @@ p {
     font-size: 1.1rem;
 }
 
-.exportar {
-    color: #009587;
-    text-align: center;
-}
-
 .centered-text {
     max-width: 800px;
     margin: 3% auto;
@@ -24,38 +19,31 @@ p {
     line-height: 1.6;
 }
 
-.close {
-    background-color: #009587;
-    color: white;
-    border: none;
-    padding: 15px 30px;
-    font-size: 1rem;
-    border-radius: 6px;
-    cursor: pointer;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
+.btn-cerrar {
+    width: 50%;
+    align-self: center;
     font-family: Arial, sans-serif;
 }
 
-.close:hover {
+.btn-cerrar:hover {
     background-color: #007a6e;
     transform: translateY(-2px);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
 }
 
-.close:active {
+.btn-cerrar:active {
     transform: translateY(0);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.close:disabled {
+.btn-cerrar:disabled {
     background-color: #cccccc;
     cursor: not-allowed;
     pointer-events: none;
     opacity: 0.5;
 }
 
-.close:disabled:hover {
+.btn-cerrar:disabled:hover {
     background-color: #cccccc;
 }
 
@@ -124,14 +112,12 @@ p {
 
 .loader {
     display: none;
-    width: 80px;
-    padding: 12px;
-    aspect-ratio: 1;
+    width: 100px;
+    height: 100px;
+    padding: 10px;
     border-radius: 50%;
     background: #25b09b;
-    --_m:
-        conic-gradient(#0000 10%, #000),
-        linear-gradient(#000 0 0) content-box;
+    --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
     -webkit-mask: var(--_m);
     mask: var(--_m);
     -webkit-mask-composite: source-out;
@@ -144,13 +130,6 @@ p {
     to {
         transform: rotate(1turn)
     }
-}
-
-.modal-icon {
-    display: none;
-    font-size: 3rem;
-    color: #009587;
-    margin-bottom: 1rem;
 }
 
 
