--- a/demo/src/main/resources/static/casos/consultar-casos.css
+++ b/demo/src/main/resources/static/casos/consultar-casos.css
@@ -1,3 +1,5 @@
+
+
 .container-casos {
     max-width: 100%;
     margin: 0 auto;
@@ -96,7 +98,7 @@
     overflow-x: auto;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    max-width: 95%;
+    max-width: 100%;
     margin: 0 auto;
     margin-bottom: 2rem;
 }
@@ -131,6 +133,7 @@ tr:hover {
     padding: 8px 12px;
     cursor: pointer;
     border-radius: 4px;
+    display: block;
 }
 
 .btn-detalle:hover {
@@ -166,7 +169,7 @@ tr:hover {
 
     td:nth-child(5),
     th:nth-child(5) {
-        display: none;
+        display: table-cell;
     }
 
 }
