alineo iconos de login con los textos

--- a/demo/src/main/resources/static/Login/login.css
+++ b/demo/src/main/resources/static/Login/login.css
@@ -1,4 +1,3 @@
-
 body {
     display: flex;
     flex-direction: column;
@@ -13,18 +12,15 @@ body {
     text-align: center;
 }
 
-.container{
+.container {
     max-width: 75%;
     margin: 0 auto;
     padding: 20px;
-    
 }
 
 .bottom {
-    padding:10%;
-    
+    padding: 10%;
 }
-
 
 .btn-iniciar {
     background-color: #009587;
@@ -37,7 +33,6 @@ body {
     cursor: pointer;
     display: flex;
     align-items: center;
-
 }
 
 .btn-iniciar i {
@@ -48,40 +43,13 @@ body {
     background-color: #038073;
 }
 
-/*.color-box {
-    width: 50%;
-    border: 2px solid #009587;
-    
-    border-radius: 8px;
-
-    padding: 7px;
-    padding-top: 10%;
- 
-    background-color: #009587;
-
-
-    color:#fff;
-
-}
-
+.color-box,
 .gray-box {
-    width: 50%;
-    border: 2px solid #d3d3d3;
-
+    flex: 1;
+    min-width: 300px;
+    margin: 10px;
     border-radius: 8px;
-
-    padding: 7px;
-    padding-top: 7%;
-
-    background-color: #fff;
-}*/
-
-.color-box, .gray-box {
-    flex: 1; /* Permite que las cajas ocupen el mismo espacio */
-    min-width: 300px; /* Ancho mínimo para evitar que se vuelvan demasiado estrechas */
-    margin: 10px; /* Margen entre las cajas */
-    border-radius: 8px;
-    padding: 20px; /* Espacio interno */
+    padding: 20px;
 }
 
 .color-box {
@@ -96,8 +64,8 @@ body {
 }
 
 .box {
-    display: flex; 
-    justify-content: space-between; 
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 20px;
     margin-left: auto;
@@ -107,7 +75,6 @@ body {
     background-color: #009587;
     flex-wrap: wrap;
 }
-
 
 .inicio {
     font-size: 20px;
@@ -121,7 +88,7 @@ body {
 }
 
 .sist {
-    color:#fff;
+    color: #fff;
 }
 
 .error-message-text {
@@ -130,28 +97,34 @@ body {
     display: none;
     align-items: center;
 }
+.material-symbols-outlined {
+    vertical-align: middle;
+    font-size: 24px;
+    margin-right: 8px;
+}
 
 @media (max-width: 768px) {
     .container {
-        padding: 10px; /* Reducir el padding en pantallas pequeñas */
+        padding: 10px;
     }
 
-    .color-box, .gray-box {
-        margin: 0 10px; /* Margen lateral */
+    .color-box,
+    .gray-box {
+        margin: 0 10px;
     }
 
     .btn-iniciar {
-        padding: 15px; /* Ajustar padding del botón */
+        padding: 15px;
     }
 }
 
 @media (max-width: 480px) {
     .inicio {
-        font-size: 18px; /* Ajustar tamaño de fuente */
+        font-size: 18px;
     }
 
     .btn-iniciar {
-        font-size: 14px; /* Reducir tamaño de la fuente del botón */
-        padding: 10px; /* Ajustar el padding */
+        font-size: 14px;
+        padding: 10px;
     }
 }
