--- a/demo/src/main/resources/static/formulario/formulario.css
+++ b/demo/src/main/resources/static/formulario/formulario.css
@@ -443,6 +443,15 @@ body {
         width: 100%;
         padding: 20px;
     }
+
+    .error-message-text {
+        color: red;
+        font-size: 0.8rem;
+    }
+
+    .mensaje-error {
+        font-size: 0.8rem;
+    }
 }
 
 @media (min-width: 768px) {
@@ -464,9 +473,7 @@ body {
 
     .error-message-text {
         color: red;
-        font-size: 0.8rem;
         display: none;
-        margin-top: 10px; 
-        
+        margin-top: 10px;
     }
 }
