--- a/demo/src/main/resources/static/index.css
+++ b/demo/src/main/resources/static/index.css
@@ -184,15 +184,29 @@ header {
   text-align: center;
   margin-top: auto;
   width: 100%;
-  height: 90px;
+  padding: 20px 10px; 
   position: relative;
   bottom: 0;
-  left: 0;
-  font-size: 17px;
-  font-family: verdana;
+  font-size: 1.2rem;
+  font-family: Verdana, sans-serif;
   background-color: #009587;
   color: #fff;
+}
 
+
+@media (max-width: 768px) {
+  .footer {
+    font-size: 1rem;
+    padding: 15px 5px; 
+  }
+}
+
+
+@media (max-width: 480px) {
+  .footer {
+    font-size: 0.9rem; 
+    padding: 10px 5px; 
+  }
 }
 
 .multiselect {
