--- a/demo/src/main/resources/static/dataset/exportar.css
+++ b/demo/src/main/resources/static/dataset/exportar.css
@@ -5,11 +5,11 @@
     text-align: center;
 }
 
-p {
+/*p {
     margin-bottom: 2rem;
     line-height: 1.6;
     font-size: 1.1rem;
-}
+}*/
 
 .centered-text {
     max-width: 800px;
