--- a/demo/src/main/resources/static/Login/login.css
+++ b/demo/src/main/resources/static/Login/login.css
@@ -3,6 +3,11 @@ body {
     flex-direction: column;
     align-items: center;
     margin: 0;
+    background-position: center;
+    height: 100vh;
+    background-color: #F0F0F0;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='315' height='37.8' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23DEDEDE' stroke-width='10' stroke-opacity='0.33'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
+
 }
 
 .page-title {
@@ -16,6 +21,7 @@ body {
     max-width: 75%;
     margin: 0 auto;
     padding: 20px;
+    margin-top: 7%;
 }
 
 .bottom {
@@ -134,6 +140,7 @@ body {
 @media (max-width: 768px) {
     .container {
         padding: 10px;
+        margin-top: 0px;
     }
 
     .color-box,
